--- a/OpenHRM/pom.xml
+++ b/OpenHRM/pom.xml
@@ -49,7 +49,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>FullCoverage.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
